--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Beta1_1"
         tools:targetApi="31">
         <activity
+            android:name=".MaterialDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SharafListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NahwuListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MaterialListActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
