--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Beta1_1"
         tools:targetApi="31">
         <activity
+            android:name=".QuestionsDiscussionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QuizResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QuestionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MaterialVideoActivity"
+            android:exported="false" />
+        <activity
             android:name=".MaterialDetailActivity"
             android:exported="false" />
         <activity
